Update some endpoints + fix documentation
